<resources>
    <string name="app_name">Layout XML</string>

    <string name="name">GigaGal\'s Blaster Emporium</string>
    <string name="description">Come on down to GigaGal\'s Blaster Emporium, where you\'ll find the finest in robot blasting technology. Ammo, powerups, and target dummies, all at low, low prices!</string>
    <string name="phone_number" translatable="false">1–800–555–6164</string>
    <string name="address">123 W Mega Ln. \n Robot City, HZ. 65536</string>
    <string name="website" translatable="false">https://github.com/udacity/ud406</string>
    <string name="hours">Open 24 hours!</string>

    <string name="bullet_description">Ammo: 100 for 20 smidgens</string>
    <string name="powerup_description">Powerups: 10 smidgens each</string>
    <string name="enemy_description">Practice targets: 10 for 5 smidgens</string>

    <string name="gigagal_content_description">GigaGal</string>
    <string name="bullet_content_description">Ammo</string>
    <string name="powerup_content_description">Powerup</string>
    <string name="enemy_content_description">Target Dummy</string>
    <string name="explosion_content_description">Explosion</string>


    <string name="buy_now">Buy now!</string>

</resources>
