<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.silver.layoutxml.ui.BusinessActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/walk_animation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/gigagal_content_description"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/walk_animation" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/phone_number"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/address"
                        android:textAlignment="center"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/website"
                        android:textAlignment="center"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/hours"
                        android:textAlignment="center"

                        />


                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight">

                <ImageView
                    android:layout_width="@dimen/item_size"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:adjustViewBounds="true"
                    android:foregroundGravity="center"

                    android:contentDescription="@string/bullet_content_description"
                    android:src="@drawable/bullet" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/bullet_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="buyButtonPressed"
                    android:text="@string/buy_now" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight">

                <ImageView
                    android:layout_width="@dimen/item_size"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:foregroundGravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/powerup_content_description"
                    android:src="@drawable/powerup" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/powerup_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="buyButtonPressed"
                    android:text="@string/buy_now" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight">

                <ImageView
                    android:layout_width="@dimen/item_size"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:foregroundGravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/enemy_content_description"
                    android:src="@drawable/enemy" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/enemy_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="buyButtonPressed"
                    android:text="@string/buy_now" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="fabPressed"
        android:src="@drawable/explosion_1" />


</merge>
